# micrometeorology-ufba

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy_output.txt  pyproject.toml  utility.py
.github/: dependabot.yml
.github/workflows/: ci.yml
Formatting/: join_rain.py  labmim-merge-2020-2021.ipynb  merge-files-inmet.ipynb  merge-files-metar.ipynb  merge-files-radiofarol.ipynb  sep_2019_teo.py
Formatting/Datalogger output/: LBMUFBA_fmt_rain.c
Formatting/Statistic/: statistics-jounee-younes-inmet.py  statistics-jounee-younes.py
Graphs/Kd-Kt/: ktkd-inmet.py  ktkd-labmim.py
benchmarks/solrad_correction/: artifact_checkpoint.py  loading.py  preprocessing.py  sequence_dataloader.py
configs/micromet/: calibrations.yaml  default.yaml
configs/tcc/experiments/: lstm_hourly.yaml  svm_hourly.yaml
data/inmet/: inmet_process.py
data/labMiM/: controle.py
data/wrf/: series_WRF.py  utility.py
docs/: labmim_micrometeorology.md  micrometeorology.md  solrad_correction.md  solrad_correction_open_points.md
graphs/wrf/: gifs.py  maps.py
legacy/: main-operacional.py  processa_wrf_04.1_figuras-V1.0.3.py  processa_wrf_07.1_geojson-V1.0.0.py  rastermap.yml  utility.py
legacy/Formatting/: balanco de radiacao.ipynb  controle_old.py  join_and_calibration_databases.py  join_rain.py  labmim-merge-2020-2021.ipynb  merge-files-inmet.ipynb  merge-files-metar.ipynb  merge-files-radiofarol.ipynb  process-bruto2horario.ipynb  sep_2019_teo.py
legacy/Formatting/Statistic/: statistics-jounee-younes-inmet.py  statistics-jounee-younes.py
legacy/Graphs-site-15min/: graficos1_UFBA_v5.py  graficos3_UFBA_v1.py  graphs-cbens.py  main.py  utility.py
legacy/Graphs-site-15min/Kd-Kt/: ktkd-inmet.py  ktkd-labmim.py
legacy/firmware/: LBMUFBA_fmt_lenta.c  LBMUFBA_fmt_rain.c
legacy/scripts-wrf/: namelist.processa  processa_wrf_00_system-V3.1.0.scpt  processa_wrf_01_busca-V2.0.0.scpt  processa_wrf_02_wps-V2.0.0.scpt  processa_wrf_03_wrf-V2.0.0.scpt  processa_wrf_04_python-V2.0.0.scpt  processa_wrf_05_mmif-V2.0.0.scpt  processa_wrf_06_readwrfnc-V2.1.0.scpt  processa_wrf_07_interative-map-V1.0.0.scpt  processa_wrf_08_ftp-V2.0.0.scpt  processa_wrf_09_deletafiles-V1.1.2.scpt
legacy/wrf/: comparissons.py  mapsGenerator.py  metrics.py  nearest-neighbor.py  netcdf-and-maps.py  netcdfUtils.py  run-maps.py  run-metrics.py  run-netcdf.py  wrf-graphs.ipynb
notebooks/exploratory/: 01_sensor_data_merging.ipynb  02_wrf_timeseries_comparison.ipynb
notebooks/tcc/: 02_colab_training.ipynb
scratch/benchmarks/artifacts/: manifest.json
scratch/benchmarks/loading/: synthetic.parquet
scratch/solrad_smoke/: smoke_hourly.csv
scripts/: README.md  train_colab.py
scripts/micromet/: generate_site_graphs.py  migrate_geojson.py  process_wrf_figures.py  process_wrf_geojson.py  run_comparison.py  run_metrics.py  run_wrf_local.py
scripts/wrf/: processa_wrf_04_python.sh  run_all.py
site/: ARCHITECTURE.md  README.md  climatologia.html  index.html  mapas_interativos.html  mapas_meteorologicos.html  monitoring.html  projects_old.html  publications_old.html  team.html
site/Graphs/: graficos1_UFBA_v5.py  graficos3_UFBA_v1.py  main.py  utility.py
site/assets/css/: custom-themes.css  maps.css  modern.css  style.css  template.css
site/assets/js/: charts-manager.js  map-init.js  map-manager.js  script-mapas.js  script.js  variables-config.js  video.js
site/assets/json/: files.json
src/labmim_micrometeorology/: __init__.py  cli.py
src/labmim_micrometeorology/cli/: migrate_geojson.py  process_sensor_data.py  process_wrf_figures.py  process_wrf_geojson.py  run_comparison.py  run_metrics.py  run_wrf_local.py
src/labmim_micrometeorology/common/: config.py  logging.py  paths.py  types.py
src/labmim_micrometeorology/sensors/: aggregation.py  calibration.py  export.py  ingestion.py  wind.py
src/labmim_micrometeorology/stats/: __init__.py  climatology.py  comparison.py  metrics.py
src/labmim_micrometeorology/wrf/: animation.py  batch.py  geojson.py  interpolation.py  plotting.py  reader.py  series.py  variables.py
src/micrometeorology/: __init__.py
src/micrometeorology/cli/: compare_wrf_observations.py  compute_metrics.py  export_wrf_geojson.py  generate_station_graphs.py  ingest_sensor_data.py  plot_station_graphs.py  render_wrf_maps.py  run_wrf_pipeline.py
src/micrometeorology/common/: config.py  types.py
src/micrometeorology/sensors/: __init__.py  aggregation.py  calibration.py  export.py  ingestion.py  plotting.py  wind.py
src/micrometeorology/stats/: climatology.py  comparison.py  metrics.py  radiation.py
src/micrometeorology/wrf/: __init__.py  animation.py  batch.py  execution.py  geojson.py  interpolation.py  plotting.py  reader.py  series.py  variables.py
src/solrad_correction/: __init__.py  cli.py  cli_colab.py  config.py
src/solrad_correction/config/: __init__.py  data.py  experiment.py  features.py  models.py  preprocessing.py  runtime.py  split.py
src/solrad_correction/data/: __init__.py  alignment.py  loaders.py  preprocessing.py  splits.py
tests/: __init__.py  conftest.py
tests/micromet/: test_aggregation.py  test_calibration.py  test_cli_smoke.py  test_geojson.py  test_metrics.py  test_wind.py  test_wrf_batch.py  test_wrf_execution.py  test_wrf_interpolation.py  test_wrf_reader.py
tests/tcc/: __init__.py  test_benchmarks.py  test_cli_contracts.py  test_colab_script.py  test_config_validation.py  test_data_loading.py  test_evaluation_policy.py  test_experiment_artifacts.py  test_features.py  test_io_contracts.py  test_model_interface.py  test_pipeline_contracts.py  test_preprocessing.py  test_runtime_config.py  test_scientific_contracts.py  test_sequence_dataset.py  test_splits.py  test_training_contracts.py  test_training_smoke.py
wrf/: README.txt  comparissons.py  mapsGenerator.py  metrics.py  nearest-neighbor.py  netcdf-and-maps.py  netcdfUtils.py  run-labmim-maps.py  run-labmim-metrics.py  run-labmim-netcdf.py  run-maps.py  run-metrics.py  run-netcdf.py  run-ufes-maps.py  run-ufes-metrics.py  run-ufes-netcdf.py
(+48 files in other folders)
